[package]
name = "stunclient"
version = "0.1.1"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
description = "Simple STUN client for resolving external IP address and port of a UDP socket"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/rust-stunclient"
keywords = ["stun", "rfc5389", "nat"]
categories = ["network-programming"]
readme = "README.md"



[dependencies]
stun_codec = "0.1.10"
bytecodec = "0.4.11"
rand = "0.6"
futures = { version = "0.1.25", optional = true }
tokio-udp = { version = "0.1.3", optional = true }
tokio-timer = { version = "0.2.9", optional = true }

[replace]
#"stun_codec:0.1.10" = {path = "/mnt/src/git/stun_codec"}

[dev-dependencies]
tokio = "0.1.15"

[features]
async = ["futures", "tokio-udp", "tokio-timer"]
default = ["async"]
