[package]
name = "stunclient"
version = "0.4.1"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
description = "Simple STUN client for resolving external IP address and port of a UDP socket"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/rust-stunclient"
keywords = ["stun", "rfc5389", "nat"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
stun_codec = "0.4"
bytecodec = "0.5"
rand = "0.9"
tokio = { version = "1", features = ["time", "net", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }

[features]
async = ["tokio"]
default = ["async"]
